# Async-FastAPI-MultiDB

./: .env.example  .env.pytest.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README-CN.md  README-EN.md  README.md  docker-compose-pytest.yml  docker-compose.yml  justfile  logging.ini  pyproject.toml
alembic/: env.py
docs/: GIT-CN.md  GIT.md
scripts/: celery-clear-task.sh  celery-run-beat.sh  celery-run-worker.sh  run-dev.sh  start_celery_beat.sh
src/: initdb.py  main.py  worker.py
src/api/v1/: __init__.py  auth.py  router.py
src/core/: config.py  database.py  environment.py  exceptions.py  lifecycle.py  mysql.py  permission.py  redis_client.py  route.py
src/crud/: auth.py  base.py  crud_beanie.py  crud_sqlmodel.py  role.py  router.py
src/models/: __init__.py  auth.py  base.py  counter.py  router.py  test.py  user.py
src/queues/: app.py  celery.py  models.py  scheduler.py  task.py
src/queues/tasks/: tasks.py
src/schemas/: __init__.py  auth.py  base.py  request.py  response.py  role.py  router.py
src/services/: auth.py
src/utils/: constants.py  minio_client.py  security.py  uuid7.py  validate.py
src/websockets/: params.py  server.py
src/websockets/events/: connection.py
tests/: conftest.py  utils.py
tests/auth/: test_login.py
tests/crud/: test_base.py  test_mongo_base.py  test_redis_base.py  test_sql_base.py
